--- a/a_tracker/SB-Admin-BS4-Angular-5/src/app/layout/components/header/header.component.html
+++ b/a_tracker/SB-Admin-BS4-Angular-5/src/app/layout/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-    <a class="navbar-brand" href="#">A-Tracker </a>
+    <a class="navbar-brand" href="#">Gradelink<i class="fa fa-check" aria-hidden="true"></i></a>
     <button class="navbar-toggler" type="button" (click)="toggleSidebar()">
         <!-- <span class="navbar-toggler-icon"></span> -->
         <i class="fa fa-bars text-muted" aria-hidden="true"></i>
@@ -15,7 +15,7 @@
                     class="nav-link btn mt-1" role="button"
                     style="padding: .375rem 1rem !important;border-color: #999;"
                 >
-                    {{ 'View Students' | translate }}
+                    {{ 'Take Attendence' | translate }}
                 </a>
             </li> &nbsp;
             <li class="nav-item">
