--- a/a_tracker/SB-Admin-BS4-Angular-5/src/app/layout/dashboard/dashboard.component.html
+++ b/a_tracker/SB-Admin-BS4-Angular-5/src/app/layout/dashboard/dashboard.component.html
@@ -1,5 +1,9 @@
+<style>
+
+</style>
+
 <div [@routerTransition]>
-    <h2 class="text-muted">Dashboard <small>Statistics Overview</small></h2>
+    <h2 class="text-muted">Welcome<small></small></h2>
     <div class="row">
         <div class="col-md-12">
             <ngb-carousel>
