--- a/a_tracker/SB-Admin-BS4-Angular-5/src/app/layout/tables/tables.component.html
+++ b/a_tracker/SB-Admin-BS4-Angular-5/src/app/layout/tables/tables.component.html
@@ -1,8 +1,8 @@
 <div [@routerTransition]>
-    <app-page-header [heading]="'Tables'" [icon]="'fa-table'"></app-page-header>
+    <app-page-header [heading]="'Classes'" [icon]="'fa-table'"></app-page-header>
     <div class="row">
         <div class="col col-xl-6 col-lg-12">
-            <div class="card mb-3">
+            <!-- <div class="card mb-3">
                 <div class="card-header">
                     Basic example
                 </div>
@@ -38,8 +38,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="card mb-3">
+            </div> -->
+           <!--  <div class="card mb-3">
                 <div class="card-header">Table head options</div>
                 <div class="card-body table-responsive">
                     <table class="table">
@@ -103,8 +103,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="card mb-3">
+            </div> -->
+           <!--  <div class="card mb-3">
                 <div class="card-header">Bordered table</div>
                 <div class="card-body table-responsive">
                     <table class="table table-bordered">
@@ -142,9 +142,9 @@
                         </tr>
                         </tbody>
                     </table>
-                </div>
-            </div>
-            <div class="card mb-3">
+                </div> -->
+           <!--  </div> -->
+            <!-- <div class="card mb-3">
                 <div class="card-header">Small table</div>
                 <table class="table table-sm">
                     <thead>
@@ -176,8 +176,8 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-        <div class="col col-xl-6 col-lg-12">
+        </div> -->
+        <!-- <div class="col col-xl-6 col-lg-12">
             <div class="card mb-3">
                 <div class="card-header">Inverse table</div>
                 <div class="card-body table-responsive">
@@ -212,8 +212,8 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="card mb-3">
+            </div> -->
+            <!-- <div class="card mb-3">
                 <div class="card-header">Striped Rows</div>
                 <div class="card-body table-responsive">
                     <table class="table table-hover table-striped">
@@ -271,7 +271,7 @@
                         </tbody>
                     </table>
                 </div>
-            </div>
+            </div> -->
             <div class="card mb-3">
                 <div class="card-header">Hoverable rows</div>
                 <table class="card-body table table-hover">
@@ -304,7 +304,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="card mb-3">
+           <!--  <div class="card mb-3">
                 <div class="card-header">Contextual classes</div>
                 <table class="card-body table">
                     <thead>
@@ -348,7 +348,7 @@
                     </tr>
                     </tbody>
                 </table>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
